# paintbox

./: .gitignore  .readthedocs.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  context.py  fit_simulations.py  lick.py  make_simulated_csps.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_lick.py  tox.ini
bps/: plot_simulations.py
bps/ppxf/: capfit.py
bps/simulations/: bursts.py
bsf/: __init__.py  bsf.py  context.py  der_snr.py  extinction_laws.py  extlaws.py  fit_simulations.py  hbfit.py  likelihoods.py  models.py  operators.py  sed_components.py  sed_models.py
bsf-sim/: context.py  fit_simulations.py  make_simulations.py  plot_simulations.py  plots_npfit.py
bsf-sim/miles_models/: Mun1.30Zm0.40T00.1585_iPp0.00_baseFe_linear_FWHM_2.51.fits  Mun1.30Zm0.71T05.0119_iPp0.00_baseFe_linear_FWHM_2.51.fits  Mun1.30Zm0.71T12.5893_iPp0.00_baseFe_linear_FWHM_2.51.fits  Mun1.30Zm1.31T01.2589_iPp0.00_baseFe_linear_FWHM_2.51.fits  (+3 more)
docs/: basic_classes.rst  building_models.rst  conf.py  getting_started.ipynb  getting_started.rst  index.rst  preparing_models.rst  requirements.txt
examples/: der_snr.py  example_bayes_ppxf.py  ppxf.py  ppxf_util.py
licenses/: LICENSE.rst
lick/: convolve.py  lick.py
losvdutils/: losvd_convolve.py
models/: bppxf.py  sspmodels.py  tmcsp.py
paintbox/: __init__.py  extlaws.py  interfaces.py  likelihoods.py  logspace_dispersion.py  operators.py  sed.py  sed_components.py  ssp_utils.py  theano_loglike.py  version.py
simulations/: bursts.py  capfit.py  context.py  fit_simulations.py  make_simulated_csps.py  miles_util.py  plot_simulations.py  ppxf.py  ppxf_util.py  sim_csps.py
tutorials/: basic_classes.ipynb  building_models.ipynb  cvd18.ipynb  extlaws.ipynb  getting_started.ipynb  nonparametric.ipynb  parametric.ipynb  polynomials.ipynb  preparing_models.ipynb  resample.ipynb
(+612 files in other folders)
