[metadata]
name = paintbox
author = Carlos Eduardo Barbosa
author_email = kadu.barbosa@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://github.com/cebarbosa/paintbox
description = Paintbox
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = cebarbosa/paintbox

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
paintbox = data/*

[tool:pytest]
testpaths = "paintbox" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    paintbox/_astropy_init*
    paintbox/conftest.py
    paintbox/*setup_package*
    paintbox/tests/*
    paintbox/*/tests/*
    paintbox/extern/*
    paintbox/version*
    */paintbox/_astropy_init*
    */paintbox/conftest.py
    */paintbox/*setup_package*
    */paintbox/tests/*
    */paintbox/*/tests/*
    */paintbox/extern/*
    */paintbox/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
